@@ -53,6 +53,7 @@
 #include "ext/standard/php3_mail.h"
 #include "ext/standard/php3_syslog.h"
 #include "ext/standard/php_lcg.h"
+#include "ext/standard/php_metaphone.h"
 @EXT_INCLUDE_CODE@
 
 /* SNMP has to be moved to ext */
@@ -77,6 +78,7 @@ zend_module_entry *php3_builtin_modules[] = {
 	phpext_mail_ptr,
 	phpext_syslog_ptr,
 	phpext_lcg_ptr,
+	phpext_metaphone_ptr,
 @EXT_MODULE_PTRS@
 };
 
